--- a/3-my-exercise-solutions/lesson-10/10j.css
+++ b/3-my-exercise-solutions/lesson-10/10j.css
@@ -1,47 +1,36 @@
 body {
   font-family: Arial;
-}
-
-.circular-button {
-  font-size: 100%;     
-  font-weight: bold;
-  background-color: rgb(64, 64, 64);
-  color: white;
-  width: 50px;
-  height: 50px;
-  border: none;
-  border-radius: 25px;
-  border-color: rgb(64, 64, 64);
-  padding: 2px;
-  cursor: pointer;
-}
-
-.orange-button {
-  font-size: 100%;     
-  font-weight: bold;
-  background-color: orange;
-  color: white;
-  width: 50px;
-  height: 50px;
-  border: none;
-  border-radius: 25px;
-  border-color: orange;
-  padding: 2px;
-  cursor: pointer;
+  background-color: rgb(0,0,0);
 }
 
 .calculation-result {
-  font-size: 100%;     
-  font-weight: bold;
-  background-color: black;
   color: white;
-  width: 200px;
-  height: 25px;
-  border: solid;
-  border-color: red;
-  border-width: thin;
-  padding: 2px;
+  font-size: 45px;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+.calculator-button {
+  font-size: 26px;     
+  font-weight: bold;
+  height: 60px;
+  width: 60px;
+  border-radius: 30px;
+  border: none;
+  margin-right: 5px;
   cursor: pointer;
-  align-items: center;
-  justify-content: left;
+}
+
+.grey-button {
+  background-color: rgb(51, 51, 51);
+  color: white;
+}
+
+.orange-button {
+  background-color: rgb(254, 160, 10);;
+  color: white;
+}
+
+.clear-button {
+  font-size: 17px
 }
