Completed exercise 18m making the orders page interactive.  In amazon.js, checkout.js and orders.js call the load page function at the last line of the file.  For renderOrderSummary() and renderPaymentSummary() add comments to end of file that the render functions do not need to be called there because the load page functions will take care of that.  Disable the place order button if cart is empty and added .js-place-order-button to checkout.css to set opacity to 0.5 when disabled.  Moved enable/disable of place order button to paymentSummary.js.  Added code to exit from place order event handler if cart is empty.

--- a/3-my-exercise-solutions/lesson-18/styles/pages/checkout/checkout.css
+++ b/3-my-exercise-solutions/lesson-18/styles/pages/checkout/checkout.css
@@ -210,6 +210,11 @@
   margin-bottom: 15px;
 }
 
+.js-place-order-button:disabled {
+  opacity: 0.5;
+  pointer-events: none; // Optional, to prevent clicks
+}
+
 .product-quantity {
   display: flex;
   align-items: center; /* Align items vertically in the center */
